fix: rename delete button to 'Clear completed' and improve visibility

--- a/src/styles/blocks/todo.css
+++ b/src/styles/blocks/todo.css
@@ -132,16 +132,6 @@
     opacity: 0;
     visibility: hidden;
   }
-
-  &.is-inactive {
-    color: var(--color-gray-1);
-    cursor: not-allowed;
-    pointer-events: none;
-
-    &:hover {
-      color: var(--color-gray-1);
-    }
-  }
 }
 
 .button__toggle-all:not(.is-visible) {
